--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/moment": "^2.11.29",
     "@types/passport-jwt": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "moment": "^2.30.1",
     "mysql2": "^3.15.2",
     "nodemon": "^3.1.10",
