--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/moment": "^2.11.29",
     "@types/passport-jwt": "^4.0.1",
+    "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
