--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.940.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -30,12 +31,14 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/moment": "^2.11.29",
     "@types/passport-jwt": "^4.0.1",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.15.2",
     "nodemon": "^3.1.10",
     "passport-jwt": "^4.0.1",
